src/tests/errors/lexing/test07.cmp
program main 
begin
    proc x() 
    begin 
       begin := 1  /* keyword != identifier */
    end 
end 